tests/expectations/compiler/finalize/block_height_fail.out
Error [ETYC0372034]: `block.height` must be inside an async function or an async block.
    --> compiler-test:4:27
     |
   4 |         assert_eq(height, block.height);
     |                           ^^^^^^^^^^^^
